--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==1.0.2
+Flask==3.1.0
 gunicorn==20.0.4
 Pillow==6.2.0
 opencv_python==4.2.0.34
@@ -10,3 +10,4 @@ tf_slim==1.1.0
 PyYaml==5.3.1
 flask-ngrok
 Jinja2<3.1.0
+itsdangerous=2.2.0
